# db-schema-change-impact-analyzer

./: .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  application.py
src/context/: __init__.py  context_builder.py
src/detectors/: __init__.py  base.py  java_sql.py  jdbc_template_detector.py  jpa_detector.py  mybatis_detector.py  querydsl_detector.py  spring_batch_detector.py  sql_utils.py  string_sql_detector.py
src/index/: __init__.py  project_index.py
src/llm/: __init__.py  mapping_agent.py
src/output/: __init__.py  report_writer.py
src/scanner/: __init__.py  project_scanner.py
src/validator/: __init__.py  coverage_validator.py
src/workflow/: __init__.py  langgraph_workflow.py
test/: README.md
tests/: test_application.py  test_jdbc_template_detector.py  test_jpa_detector.py  test_local_chat_model.py  test_mybatis_detector.py  test_querydsl_detector.py  test_spring_batch_detector.py  test_string_sql_detector.py  test_workflow.py
