[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "springboot-data-lineage-agent"
version = "0.1.0"
description = "Plugin-based evidence collector for Spring Boot data migration lineage"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
